--- a/ollie/style.css
+++ b/ollie/style.css
@@ -5,14 +5,14 @@ Author: Mike McAlister
 Author URI: mikemcalister.com
 Description: Launch a blazing-fast, pixel-perfect website with the Ollie WordPress block theme! Ollie features over 50 beautiful pattern designs, 7 full-page pattern layouts, and a fully-customizable design system with Global Styles. Ollie integrates seamlessly with all of the powerful new WordPress editor features, giving you the most lightweight and powerful website builder on the planet — no expensive page builder plugin required! ✶ Full demo: https://demo.olliewp.com ✶
 Tags: blog, portfolio, entertainment, grid-layout, one-column, two-columns, three-columns, four-columns, block-patterns, block-styles, custom-logo, custom-menu, editor-style, featured-images, full-site-editing, full-width-template, rtl-language-support, style-variations, template-editing, theme-options, translation-ready, wide-blocks
-Tested up to: 6.6
+Tested up to: 6.7.1
 Requires PHP: 7.3
-Version: 1.2.5
+Version: 1.3.0
 License: GNU General Public License v3 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: ollie
 
-Ollie WordPress Theme, (C) 2024 Mike McAlister.
+Ollie WordPress Theme, (C) 2025 Mike McAlister.
 Ollie is distributed under the terms of the GNU GPL.
 */
 
@@ -79,6 +79,7 @@ input[type="submit"],
 input[type="text"],
 textarea {
 	-webkit-appearance: none;
+	appearance: none;
 }
 
 input:not([type="submit"]),
@@ -115,7 +116,7 @@ label {
 	opacity: 0.75;
 }
 
-/* Helper styles that can't be done via theme.json
+/* Helper styles
 ---------------------------------------------------------------------------- */
 
 a.more-link {
@@ -163,5 +164,9 @@ a.more-link {
 @media (max-width: 781px) {
 	.ollie-hide-on-mobile {
 		display: none;
+	}
+
+	.ollie-unstick-mobile {
+		position: static;
 	}
 }
