--- a/ollie/style.css
+++ b/ollie/style.css
@@ -7,7 +7,7 @@ Description: Launch a blazing-fast, pixel-perfect website with the Ollie WordPre
 Tags: blog, portfolio, entertainment, grid-layout, one-column, two-columns, three-columns, four-columns, block-patterns, block-styles, custom-logo, custom-menu, editor-style, featured-images, full-site-editing, full-width-template, rtl-language-support, style-variations, template-editing, theme-options, translation-ready, wide-blocks
 Tested up to: 6.7.1
 Requires PHP: 7.3
-Version: 1.3.4
+Version: 1.4.0
 License: GNU General Public License v3 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: ollie
@@ -89,9 +89,10 @@ textarea,
 .wp-block-post-comments-form textarea {
 	color: var(--wp--preset--color--main);
 	border-radius: 5px;
-	border: solid 1px var(--wp--preset--color--main-accent);
+	border: solid 1px var(--wp--preset--color--border-light);
 	padding: .5em 1em;
 	font-size: var(--wp--preset--font-size--small);
+	background-color: #fff;
 }
 
 input:focus-visible,
