--- a/ollie/style.css
+++ b/ollie/style.css
@@ -7,7 +7,7 @@ Description: Launch a blazing-fast, pixel-perfect website with the Ollie WordPre
 Tags: blog, portfolio, entertainment, grid-layout, one-column, two-columns, three-columns, four-columns, block-patterns, block-styles, custom-logo, custom-menu, editor-style, featured-images, full-site-editing, full-width-template, rtl-language-support, style-variations, template-editing, theme-options, translation-ready, wide-blocks
 Tested up to: 6.7.1
 Requires PHP: 7.3
-Version: 1.5.2
+Version: 1.5.4
 License: GNU General Public License v3 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: ollie
@@ -174,7 +174,7 @@ a.more-link {
 
 /* Sticky header */
 
-header:has(>.is-position-sticky) {
+body:not(.wp-admin) header:has(>.is-position-sticky) {
 	position: sticky;
 	top: calc( 0px + var( --wp-admin--admin-bar--height, 0px ) );
 	z-index: 100;
